--- a/app/globals.css
+++ b/app/globals.css
@@ -3,3 +3,14 @@
   padding: 0;
   margin: 0;
 }
+
+body {
+  padding: 20px 0 70px 0;
+  background-color: hsl(0deg, 0%, 5%);
+  color: hsl(0deg, 0%, 100%);
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
+}
