--- a/app/globals.css
+++ b/app/globals.css
@@ -8,9 +8,19 @@ body {
   padding: 20px 0 70px 0;
   background-color: hsl(0deg, 0%, 5%);
   color: hsl(0deg, 0%, 100%);
+
+  background-image: url('/images/background.jpg');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  background-attachment: fixed;
 }
 
 a {
   text-decoration: none;
   color: inherit;
+}
+
+.disabled {
+  pointer-events: none;
 }
