--- a/app/my-team/page.module.css
+++ b/app/my-team/page.module.css
@@ -3,3 +3,9 @@
   grid-template-columns: repeat(5, 1fr);
   gap: 10px;
 }
+
+@media screen and (max-width: 850px) {
+  .grid {
+    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  }
+}
